@@ -71,6 +71,8 @@ SIP Changes
  * Added support for 16khz signed linear media streams.
  * SIP is now able to bind to and communicate with IPv6 addresses. In addition,
    RTP has been outfitted with the same abilities.
+ * Added support for setting the Max-Forwards: header in SIP requests. Setting is
+   available in device configurations as well as in the dial plan.
 
 IAX2 Changes
 -----------
